--- a/_pages/education.html
+++ b/_pages/education.html
@@ -35,16 +35,15 @@ author_profile: true
     <p><strong>Amirkabir University of Technology (Tehran Polytechnic)</strong> – Tehran, Iran <span style="float:right;">2020 – 2025</span></p>
     <p><em>B.Sc, Computer Engineering</em></p>
     <ul>
-        <li><strong>GPA:</strong> 17.41/20 (3.73/4.0)</li>
-        <li><strong>Last Two Years GPA:</strong> 18.14/20 (3.87/4.0)</li>
-        <li><strong>Thesis Title:</strong> Implementing a semi-decentralized framework for running federated learning on edge networks.</li>
+        <li><strong>GPA:</strong> 17.89/20 (3.76/4.0)</li>
+        <li><strong>Last Two Years GPA:</strong> 18.14/20 (3.85/4.0)</li>
     </ul>
 
     <h3>Related Coursework</h3>
     <div class="coursework">
         <div class="coursework-column">
             <ul>
-                <li>Cloud Computing 20/20</li>
+                <li>Software Testing 20/20</li>
                 <li>Operating Systems 17.88/20</li>
                 <li>Internet Engineering 20/20</li>
                 <li>Computer Networks 16.5/20</li>
