--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -75,7 +75,6 @@ author_profile: true
         <div class="card-header">Software Testing</div>
         <div class="card-body">
             <p class="ta-term">Fall 2024</p>
-            <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=7bpNAlAAAAAJ&hl=en" target="_blank">Dr. Gohari</a></p>
             <p class="ta-description">
                 Guiding students through testing methodologies, tools, and best practices for ensuring high-quality software systems. Designing and evaluated projects, managing online submissions.
             </p>
@@ -83,10 +82,9 @@ author_profile: true
     </div>
 
     <div class="teaching-card">
-        <div class="card-header">Microprocessor and Assembly (Head TA)</div>
+        <div class="card-header">Microprocessor and Assembly</div>
         <div class="card-body">
             <p class="ta-term">Spring 2024, Fall 2024</p>
-            <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=PAZOYiAAAAAJ&hl=en" target="_blank">Dr. Farbeh</a></p>
             <p class="ta-description">
                 Leading the TA team and coordinating tasks, time management, and communication between students and the professor.
             </p>
@@ -97,7 +95,6 @@ author_profile: true
         <div class="card-header">Operating Systems</div>
         <div class="card-body">
             <p class="ta-term">Spring 2024, Fall 2024</p>
-            <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=Va7RTUsAAAAJ&hl=en" target="_blank">Dr. Javadi</a> & <a href="https://www.researchgate.net/profile/Fatemeh-Ziaeetabar" target="_blank">Dr. Ziaeetabar</a></p>
             <p class="ta-description">
                 Assisted students in grasping fundamental operating system concepts, designed and evaluated class projects, graded exams, and conducted online TA sessions to support students' learning and academic success.
             </p>
@@ -105,23 +102,11 @@ author_profile: true
     </div>
 
     <div class="teaching-card">
-        <div class="card-header">Database Design (Head TA)</div>
+        <div class="card-header">Database Design</div>
         <div class="card-body">
             <p class="ta-term">Spring 2024</p>
-            <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=z2CvkDQAAAAJ&hl=en" target="_blank">Dr. Shahriari</a></p>
             <p class="ta-description">
                 Managed the TA team, scheduled activities, and facilitated communication with the professor. Reviewed and graded student database projects.
-            </p>
-        </div>
-    </div>
-
-    <div class="teaching-card">
-        <div class="card-header">Cloud Computing</div>
-        <div class="card-body">
-            <p class="ta-term">Spring 2024</p>
-            <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=Va7RTUsAAAAJ&hl=en" target="_blank">Dr. Javadi</a></p>
-            <p class="ta-description">
-                Led practical sessions on cloud architectures, distributed systems, and infrastructure management using modern tools. Designed projects and managed submissions.
             </p>
         </div>
     </div>
@@ -130,7 +115,6 @@ author_profile: true
         <div class="card-header">Software Engineering</div>
         <div class="card-body">
             <p class="ta-term">Spring 2024</p>
-            <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=7bpNAlAAAAAJ&hl=en" target="_blank">Dr. Gohari</a></p>
             <p class="ta-description">
                 Facilitated online submissions for projects. Guided students in software development methodologies.
             </p>
@@ -141,7 +125,6 @@ author_profile: true
         <div class="card-header">Database Design</div>
         <div class="card-body">
             <p class="ta-term">Spring 2024</p>
-            <p class="ta-supervisor">Supervised by <a href="https://scholar.google.com/citations?user=CCw-ockAAAAJ&hl=en" target="_blank">Dr. Pourbahman</a></p>
             <p class="ta-description">
                  Developed exercises and graded assignments, and guided students.
             </p>
@@ -152,7 +135,6 @@ author_profile: true
         <div class="card-header">Algorithms and Data Structures</div>
         <div class="card-body">
             <p class="ta-term">Spring 2022, Fall 2022, Fall 2023</p>
-            <p class="ta-supervisor">Supervised by <a href="https://sajad.shirali.ir/" target="_blank">Dr. Shirali Shahreza</a></p>
             <p class="ta-description">
                 Developed exercises, created video content, graded assignments, and guided students in problem-solving techniques using algorithms and data structures.
             </p>
